fixed app babsnet chasier